<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglaboratoire"
    tools:context=".LabAjout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="44dp"
        android:layout_above="@+id/textView17"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="229dp"
        android:layout_marginBottom="28dp"
        android:text="@string/r_sultat_test"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="343dp" />

    <Button
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="68dp"
        android:textColor="@color/white"
        android:background="@drawable/bouttonajout"
        android:onClick="retour"
        android:text="@string/liste_des_patients"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="604dp" />

    <Spinner
        android:id="@+id/spinner1"

        android:entries="@array/country__arrays"
        android:prompt="@string/country__prompt"
        android:layout_height="20dp"
        android:layout_width="20dp" />


    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="152dp"
        android:layout_height="64dp"
        android:layout_above="@+id/textView17"

        android:layout_alignParentEnd="true"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="29dp" />

    <EditText
        android:id="@+id/prenom"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cf"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="31dp"
        android:autofillHints="..."
        android:layout_marginBottom="113dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="23sp"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="343dp" />

    <EditText
        android:id="@+id/cf"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="243dp"
        android:hint="@string/exp_14_pour_2_semaines"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="23sp"
        android:text="@string/zero"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="425dp" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cin"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="-102dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="23sp"
        android:autofillHints="..."
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="276dp" />

    <EditText
        android:id="@+id/cin"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:digits="0123456789"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="518dp"
        android:hint="@string/ncinexample"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="23sp"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="214dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ajouter"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="34dp"
        android:text="@string/periode"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="401dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:layout_above="@+id/textView17"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="85dp"
        android:text="@string/prenom"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="343dp" />

    <Button
        android:id="@+id/ajouter"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/retour"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="147dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/bouttonajout"
        android:text="@string/ajouter"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="535dp" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView2"
        android:layout_width="117dp"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="11dp"
        app:srcCompat="@drawable/applicationlogo"
        tools:layout_editor_absoluteX="271dp"
        tools:layout_editor_absoluteY="-2dp" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView3"
        android:layout_width="62dp"
        android:layout_height="48dp"
        android:layout_above="@+id/cin"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="121dp"
        app:srcCompat="@drawable/ministeredelsantetunisie"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="70dp"
        android:text="@string/ajouter_persoone"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="118dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/retour"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="258dp"
        android:layout_marginBottom="385dp"
        android:text="@string/n_carte_d_identit"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="204dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:layout_above="@+id/retour"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="319dp"
        android:text="@string/nom"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="276dp" />


</RelativeLayout>