<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkbackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"

    tools:context=".ResultatTest">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:onClick="retour"
            app:srcCompat="@drawable/applicationlogo"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/test_covid19"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/cin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/n_carte_d_identit"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/nom"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints" />


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/prenom"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/ncin"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/periodcf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bouttonajout"
        android:text="@string/rechercher"
        tools:ignore="MissingConstraints" />

</LinearLayout>

