<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlaboratoire">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Revenir a la liste des patients"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="604dp"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/textView20"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:text="Borhene"
        android:textColor="@color/black"
        android:textSize="23dp"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="343dp"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/textView21"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:text="14"
        android:textColor="@color/black"
        android:textSize="23dp"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="425dp"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/textView19"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:text="Tabboubi"
        android:textColor="@color/black"
        android:textSize="23dp"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="276dp"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/textView18"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:text="09652445"
        android:textColor="@color/black"
        android:textSize="23dp"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="214dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="136dp"
        android:layout_height="86dp"
        android:text="@string/periode"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="401dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:text="@string/prenom"
        android:textColor="@color/black"
        android:textSize="23dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="343dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="177dp"
        android:layout_height="67dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textFontWeight="@android:integer/config_longAnimTime"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="13dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ajouter"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="535dp"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="109dp"
        android:layout_height="81dp"
        app:srcCompat="@drawable/darkbackground"
        tools:layout_editor_absoluteX="271dp"
        tools:layout_editor_absoluteY="-2dp"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="107dp"
        android:layout_height="74dp"
        app:srcCompat="@drawable/ministeredelsantetunisie"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="4dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_persoone"
        android:textColor="@color/purple_700"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="118dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="108dp"
        android:layout_height="55dp"
        android:text="N° carte d'identité"
        android:textColor="@color/black"
        android:textSize="23dp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="204dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:text="@string/nom"
        android:textColor="@color/black"
        android:textSize="23dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="276dp"
        tools:ignore="MissingConstraints"/>


</androidx.constraintlayout.widget.ConstraintLayout>