<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bglaboratoire"
    tools:context=".Items">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.2"
        android:orientation="vertical"><!-- Banniere -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:src="@drawable/applicationlogo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:layout_weight="2">

                <Button
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/gris"
                    android:layout_weight="1"
                    android:textAlignment="gravity"

                    android:text="@string/listes_des_patients" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:onClick="ajout"
                    android:text="@string/ajouter_patient"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="italic" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="@android:dimen/app_icon_size"
                android:verticalScrollbarPosition="defaultPosition" />


            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="130dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="4"
                    android:padding="0dp"
                    android:src="@drawable/ministeredelsantetunisie" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="2" />
            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <Button
                android:onClick="to1"
                android:text="@string/positive_en_cours"
                android:background="@color/red"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:onClick="to2"
                android:text="@string/positive_retablie"
                android:layout_width="0dp"
                android:background="@drawable/buttonbackground"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:onClick="to3"
                android:text="Test Negative"
                android:layout_width="0dp"
                android:background="@color/vertfonce"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"><!-- Body -->

        <ListView
            android:id="@+id/lv_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>